--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 body{
-
     background-color: black;
 }
-
 .menu{
 
     background-color: black;
@@ -15,7 +13,7 @@ body{
 
 .logoB{
 
-    height: 30px;
+    height: 1em;
     display: block;
     margin: auto 10px;
 
@@ -47,7 +45,7 @@ body{
    /* background-size: contain; o 100px auto, backgorund-size:contain la reduce hasta que la pueda contener*/
     background-position: center;
     background-size: cover;
-    height: 40vmax;
+  
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,11 +64,23 @@ body{
 
     text-align: center;
     display: block;
+    width: 90%;
+    margin: auto;
+    height: 40vmax;
    
 
     
    
 }
+.mainSec-content h1{
+
+    font-size: 2em;
+}
+
+ p{
+    font-size: 1em;
+}
+
 
 
 
@@ -89,8 +99,9 @@ body{
 }
 
 .buscar input{
-
-    height: 30px;
+    
+    width: 40%;
+   height: 30px;
 }
 
 .buscar button{
@@ -119,7 +130,7 @@ body{
 
         text-align: center;
         font-family: sans-serif;
-        padding-top: 20px;
+        padding-top: 40px;
         height: 60px;
       
    
@@ -136,13 +147,17 @@ body{
 
     display: grid;
     border: 1px red solid;
-    margin: 30px auto;
+    margin: 5em auto 10em auto;
     width: 90%;
+
+ 
+ 
   
     grid-template-columns:  1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(6 / 10%);
+    grid-template-rows: repeat(5 , 1fr);
 
-    grid-gap: 10px;
+    grid-gap: 1%;
+    
 }
 
 .item{
@@ -150,6 +165,7 @@ body{
     border: 1px blue solid;
     font-family: sans-serif;
     display: flex;
+    align-items: start;
    
    
 }
@@ -164,7 +180,7 @@ body{
 
 .item img{
 
-    width: 300px;
+     width: 30%;
       border: 10px green solid;
   
     
@@ -177,39 +193,36 @@ body{
     margin: 10px 10px;
 }
 
+.desMex{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.desMex img{
+
+    width: 90%;
+    
+}
 #otrosMex1{
 
     grid-column: 2/3;
-    text-align: center;
-  
-    background-image: url(../Imagenes/rivieraM.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: sans-serif;
-
-
+   
+   
 }
 
 #otrosMex2{
 
     grid-column: 3/4;
-    text-align: center;
-    background-image: url(../Imagenes/ciudades.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: sans-serif;
-
+  
 }
 
 #otrosMex3{
 
     grid-column: 4/5;
-    text-align: center;
-    background-image: url(../Imagenes/museos.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: sans-serif;
-
+   
 }
 
 #europa{
@@ -242,28 +255,56 @@ body{
 
 .footer{
 background-color: black;
-height: 100px;
+
 color: white;
 font-family: Arial, Helvetica, sans-serif;
 display: flex;
-justify-content: space-between;
 align-items: center;
+justify-content: space-between;
+border:1px red solid;
+width: 90%;
+margin: auto;
+
+}
+
+
+
+.img-icon{
+
+    width: 2em;
+    margin-right: 1em;
+}
+
+
+.info *{
+
+    margin: 0;
+}
+
+
+
+
+
+/*hamburguer menu*/
+
+.menu-icon{
+
+    color:white;
+    display: none;
+}
+
+
+@media all and (max-width:767px){  /*smartphone portrait a landscape*/
+    .menu-icon{
+        display:block;
+    }
+
+    nav{
+
+        display: none;
+    }
 
 
 }
 
-
-.icons{
-     display: flex;
-     margin-right: 20px;
-
-}
-
-.footer a{
-
-   display: block;
-    width: 30px;
-
-    
-   
-}
+ 
